force-app/main/default/objects/Member_Coverage_area__c/Member_Coverage_area__c.object-meta.xml
<CustomObject>
    <label>Member Coverage area</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Member Coverage area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Coverage Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>