force-app/main/default/objects/Member_Coverage_area__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coverages</relationshipLabel>
    <relationshipName>Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>