force-app/main/default/objects/Member_Coverage_area__c/fields/APS_Active__c.field-meta.xml
<CustomField>
    <fullName>APS_Active__c</fullName>
    <formula>IF(OR( Account_Name__r.Overall_Member_Type__c  = &quot;APS Only&quot; , Account_Name__r.Overall_Member_Type__c  = &quot;Both Member Type&quot; ), &quot;APS Active&quot;, &quot;&quot;)</formula>
    <label>APS Active</label>
    <type>Text</type>
</CustomField>