force-app/main/default/objects/Member_Coverage_area__c/fields/County_Information__c.field-meta.xml
<CustomField>
    <fullName>County_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>County Information</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.State__c</field>
            <operation>equals</operation>
            <valueField>County_Information__c.State_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>County_Information__c</referenceTo>
    <relationshipLabel>Coverages</relationshipLabel>
    <relationshipName>Coverages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>