force-app/main/default/objects/Member_Coverage_area__c/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <formula>County_Information__r.County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Name</label>
    <type>Text</type>
</CustomField>