force-app/main/default/objects/Member_Coverage_area__c/fields/Coverage_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Begin_Date__c</fullName>
    <label>Coverage Begin Date</label>
    <type>Date</type>
</CustomField>