force-app/main/default/objects/Member_Coverage_area__c/fields/Coverage_end_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_end_Date__c</fullName>
    <label>Coverage end Date</label>
    <type>Date</type>
</CustomField>