force-app/main/default/objects/Member_Coverage_area__c/fields/Diaper_Bank_Active__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Bank_Active__c</fullName>
    <formula>IF(OR( Account_Name__r.Overall_Member_Type__c  = &quot;Diaper Banks Only&quot; , Account_Name__r.Overall_Member_Type__c  = &quot;Both Member Type&quot; ), &quot;Diaper Bank Active&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diaper Bank Active</label>
    <type>Text</type>
</CustomField>