force-app/main/default/objects/Member_Coverage_area__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <formula>Account_Name__r.Member_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member ID</label>
    <type>Text</type>
</CustomField>