force-app/main/default/objects/Member_Coverage_area__c/fields/Percent_Covered__c.field-meta.xml
<CustomField>
    <fullName>Percent_Covered__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Percent Covered</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>