force-app/main/default/objects/Member_Coverage_area__c/listViews/Test_by_Susan.listView-meta.xml
<ListView>
    <fullName>Test_by_Susan</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Diaper_Bank_Active__c</columns>
    <columns>County_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>County_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Diaper_Bank_Active__c</field>
        <operation>equals</operation>
        <value>Diaper Bank Active</value>
    </filters>
    <label>Diapers</label>
</ListView>